# rca

./: .dockerignore  Cargo.toml  Dockerfile  README.md
domain/: Cargo.toml
domain/src/: lib.rs
domain/src/entities/: task.rs
domain/src/value_objects/: data.rs  ids.rs
infrastructure/: Cargo.toml
infrastructure/src/: lib.rs
infrastructure/src/handlers/: tasks.rs
interface/: Cargo.toml
interface/src/: lib.rs
interface/src/controllers/: tasks.rs
src/: app.rs  cli.yml  main.rs
src/cmd/: mod.rs  new.rs  root.rs  tasks.rs
usecase/: Cargo.toml
usecase/src/: lib.rs
usecase/src/interactors/tasks/: create.rs
usecase/src/ports/tasks/: create.rs
