[package]
name = "rca"
version = "0.1.0"
authors = ["Kazuki Iwata <kazu.0516.k0n0f@gmail.com>"]
edition = "2018"

[[bin]]
name = "rca-cli"
path = "src/main.rs"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[dependencies]
domain = { path = "./domain", version = "0.1"}
usecase = { path = "./usecase", version = "0.1"}
interface = { path = "./interface", version = "0.1"}
infrastructure = { path = "./infrastructure", version = "0.1"}
ansi_term = "^0.12.1"
clap = "2.33"